[gd_scene load_steps=11 format=3 uid="uid://csom57ywvasf5"]

[ext_resource type="Texture2D" uid="uid://3i6spt2g10rr" path="res://addons/force_directed_graph/icons/ForceDirectedGraph.svg" id="1_p4yg8"]
[ext_resource type="Script" path="res://addons/force_directed_graph/ui/graph_ui.gd" id="1_t3d8u"]
[ext_resource type="Texture2D" uid="uid://dvsr10wvptj0j" path="res://addons/force_directed_graph/icons/FDGNode.svg" id="2_mtvv5"]
[ext_resource type="Texture2D" uid="uid://dydh7pbp8qiqm" path="res://addons/force_directed_graph/icons/FDGSpring.svg" id="3_7jlyv"]

[sub_resource type="InputEventKey" id="InputEventKey_gf45o"]
device = -1
alt_pressed = true
keycode = 71

[sub_resource type="Shortcut" id="Shortcut_m2piv"]
events = [SubResource("InputEventKey_gf45o")]

[sub_resource type="InputEventKey" id="InputEventKey_odhcc"]
device = -1
alt_pressed = true
keycode = 78

[sub_resource type="Shortcut" id="Shortcut_tdywb"]
events = [SubResource("InputEventKey_odhcc")]

[sub_resource type="InputEventKey" id="InputEventKey_1tft4"]
device = -1
alt_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_6inb6"]
events = [SubResource("InputEventKey_1tft4")]

[node name="GraphUI" type="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 83.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_t3d8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonGraph" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add a new ForceDirectedGraph  to your currently selected node."
shortcut = SubResource("Shortcut_m2piv")
text = "Graph"
icon = ExtResource("1_p4yg8")
flat = true

[node name="ButtonNode" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add a new FDGNode  to your currently selected node."
shortcut = SubResource("Shortcut_tdywb")
text = "Node"
icon = ExtResource("2_mtvv5")
flat = true

[node name="ButtonSpring" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add a new FDGSpring  to your currently selected node."
shortcut = SubResource("Shortcut_6inb6")
text = "Spring"
icon = ExtResource("3_7jlyv")
flat = true
